--- a/uin-base-setup-master/project/client/package.json
+++ b/uin-base-setup-master/project/client/package.json
@@ -11,8 +11,11 @@
     "@testing-library/user-event": "^13.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@babel/eslint-plugin": "^7.13.10",
